framec_tests/language_specific/cpp/v3_outline/positive/basic_outline.frm
@target cpp

handler H {
    // native body
}

